Remove page level breadcrumb left-padding to fix left alignment

--- a/src/components/page/Header/Header.css
+++ b/src/components/page/Header/Header.css
@@ -14,6 +14,7 @@
 
 .reveal-breadcrumb .breadcrumb {
   background: none;
+  padding-left: 0;
 }
 
 .breadcrumb a {
